--- a/dash.css
+++ b/dash.css
@@ -75,12 +75,9 @@ body {
     h3 {
         color: white;
     }
-    aside div{
-        background-color: #4444449e;
+    #hero #main-content #box{
+        box-shadow: 0px 0px 5px white;
     }
-    /* aside #flow #chart{
-        background-color: black;
-    } */
 }
 
 #main {
@@ -206,6 +203,7 @@ body {
     border-radius: 50px;
     background-color: white;
     color: #24315E;
+    box-shadow: 0px 0px 2px;
 }
 
 #hero #navbar #second #mode i {
@@ -245,7 +243,7 @@ body {
 }
 
 #hero #main-content {
-    height: 100vh;
+    height: 90vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -254,9 +252,18 @@ body {
     justify-content: start;
     padding: 10px;
 }
-h1{
+#hero #main-content #box{
+    height: 80vh;
+    width: 90%;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px #24315E;
+}
+#hero #main-content #box h1{
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    margin: 200px 0px;
     font-weight: bold;
     font-size: 100px;
     color: white; 
