--- a/CssFile/insert.css
+++ b/CssFile/insert.css
@@ -207,6 +207,7 @@ body {
     border-radius: 50px;
     background-color: white;
     color: #24315E;
+    box-shadow: 0px 0px 2px;
 }
 
 #hero #navbar #second #mode i {
