--- a/CssFile/team.css
+++ b/CssFile/team.css
@@ -214,6 +214,7 @@ body {
     border-radius: 50px;
     background-color: white;
     color: #24315E;
+    box-shadow: 0px 0px 2px;
 }
 
 #hero #navbar #second #mode i {
@@ -253,26 +254,27 @@ body {
 }
 
 #hero #main-content {
+    margin-top: 30px;
     height: 90vh;
     width: 100%;
     display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+    align-items: start;
+    justify-content: center;
     /* border: 1px solid; */
 }
 
 
 #hero #main-content #team{
-    height: 80vh;
-    width: 80%;
+    height: 75vh;
+    width: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: #24315E;
-    text-align: justify;
+    color: white;
+    text-align: center;
     padding: 10px;
-    /* border: 1px solid; */
+    background-color: black;
     border-radius: 10px;
     box-shadow: 0px 0px 5px;
 }
@@ -290,8 +292,8 @@ body {
 }
 
 #hero #main-content #team img {
-    height: 50vh;
-    width: 100%;
+    height: 40vh;
+    width: 50%;
     object-fit: contain;
     background-repeat: no-repeat;
     background-position: center;
