--- a/CssFile/table.css
+++ b/CssFile/table.css
@@ -266,7 +266,7 @@ td {
 }
 table button{
     padding: 10px 18px;
-    border: 1px solid transparent;
+    border: 1px solid;
     font-weight: bold;
     background-color: #24315E;
     color: #d6c7c7;
@@ -294,7 +294,7 @@ table th {
 
 table td {
     background-color: black;
-    border: 1px solid white;
+    border: 1px solid #d6c7c7;
     font-size: 12px;
     font-weight: bold;
     color: #d6c7c7;
@@ -325,4 +325,48 @@ tbody td{
 #bottom button:hover {
     background-color: white;
     color: #24315E;
+}
+
+/*edit form */
+
+form{
+    position: fixed;
+    top: 250px;
+    height: 360px;
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid white;
+    padding: 20px 0px;
+    border-radius: 10px;
+    display: none;
+    background-color: #000000da;
+}
+form input{
+    margin-top: 10px;
+    margin-left: 43px;
+    width: 75%;
+    padding: 10px 10px;
+    font-weight: bold;
+    font-size: 12px;
+    border-radius: 5px;
+    background-color: #000000da;
+    border: 1px solid #d6c7c7;
+    outline: none;
+    color: #d6c7c7;
+}
+form #submit{
+    padding: 12px;
+    background-color: #24315E;
+    color: white;
+    cursor: pointer;
+}
+form #submit:hover{
+    background-color: white;
+    color: #24315E;
+}
+form h2{
+    color: white;
 }
