--- a/CssFile/table.css
+++ b/CssFile/table.css
@@ -338,7 +338,8 @@ form{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 1px solid white;
+    border: none;
+    box-shadow: 0px 0px 5px #d6c7c7;
     padding: 20px 0px;
     border-radius: 10px;
     display: none;
