--- a/CssFile/dash.css
+++ b/CssFile/dash.css
@@ -19,7 +19,7 @@ body {
 
 .mode {
     #left {
-        background-color: black;
+        background-color: #091C1E;
         color: white;
     }
 
@@ -42,6 +42,7 @@ body {
     #hero {
         background-color: black;
         color: white;
+        box-shadow: 0px 0px 5px white;
     }
 
     #hero p {
@@ -97,7 +98,7 @@ body {
     flex-direction: column;
     align-items: start;
     justify-content: start;
-    background-color: black;
+    background-color: #091C1E;
     /* gap: 25px; */
     /* border: 2px solid; */
 }
@@ -258,7 +259,7 @@ body {
 #hero #main-content #box {
     height: 80vh;
     width: 90%;
-    background-color: black;
+    background-color: #091C1E;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -271,10 +272,10 @@ body {
     font-weight: bold;
     font-size: 100px;
     color: white;
-    background: url("https://e0.pxfuel.com/wallpapers/581/525/desktop-wallpaper-dual-screen-3d-high-definitions-3d-dual-monitor.jpg") no-repeat;
+    /* background: url("https://e0.pxfuel.com/wallpapers/581/525/desktop-wallpaper-dual-screen-3d-high-definitions-3d-dual-monitor.jpg") no-repeat;
     -webkit-background-clip: text;
     background-clip: text;
-    -webkit-text-fill-color: transparent;
+    -webkit-text-fill-color: transparent; */
 }
 
 /*
