--- a/CssFile/insert.css
+++ b/CssFile/insert.css
@@ -19,7 +19,7 @@ body {
 
 .mode {
     #left {
-        background-color: black;
+        background-color: #091C1E;
         color: white;
     }
 
@@ -46,6 +46,7 @@ body {
     #hero {
         background-color: black;
         color: white;
+        box-shadow: 0px 0px 5px white;
     }
 
     #hero p {
@@ -79,7 +80,7 @@ body {
     }
 
     #hero #main-content form input {
-        background-color: black;
+        background-color: #091C1E;
         border: 1px solid aliceblue;
         color: white;
     }
@@ -101,7 +102,7 @@ body {
     flex-direction: column;
     align-items: start;
     justify-content: start;
-    background-color: black;
+    background-color: #091C1E;
     /* gap: 25px; */
 }
 
@@ -255,7 +256,7 @@ body {
     justify-content: center;
     border-radius: 10px;
     box-shadow: 0px 0px 5px;
-    background-color: black;
+    background-color: #091C1E;
 }
 
 #hero #main-content h3 {
