--- a/CssFile/table.css
+++ b/CssFile/table.css
@@ -19,7 +19,7 @@ body {
 
 .mode {
     #left {
-        background-color: black;
+        background-color: #091C1E;
         color: white;
     }
 
@@ -42,6 +42,7 @@ body {
     #hero {
         background-color: black;
         color: white;
+        box-shadow: 0px 0px 5px white;
     }
 
     #hero p {
@@ -87,7 +88,7 @@ body {
     flex-direction: column;
     align-items: start;
     justify-content: start;
-    background-color: black;
+    background-color: #091C1E;
     /* gap: 25px; */
 }
 
@@ -254,7 +255,7 @@ body {
     /* border: 2px solid #24315E; */
     border-radius: 10px;
     box-shadow: 0px 0px 5px;
-    background-color: black;
+    background-color: #091C1E;
 }
 
 table th,
@@ -268,18 +269,19 @@ td {
 
 table button {
     padding: 10px 18px;
-    border: 1px solid;
+    border: none;
     font-weight: bold;
-    background-color: #24315E;
+    background-color: #091C1E;
     color: #d6c7c7;
     cursor: pointer;
-    border-radius: 5px;
+    border-radius: 4px;
+    box-shadow: 0px 0px 2px;
 }
 
 table button:hover {
-    background-color: black;
+    background-color: #24315E;
     color: white;
-    border: 1px solid;
+    box-shadow: 0px 0px 2px;
 }
 
 table #head {
@@ -296,7 +298,7 @@ table th {
 }
 
 table td {
-    background-color: black;
+    background-color: #091C1E;
     border: 1px solid #d6c7c7;
     font-size: 12px;
     font-weight: bold;
