--- a/CssFile/team.css
+++ b/CssFile/team.css
@@ -19,7 +19,7 @@ body {
 
 .mode {
     #left {
-        background-color: black;
+        background-color: #091C1E;
         color: white;
     }
 
@@ -42,6 +42,7 @@ body {
     #hero {
         background-color: black;
         color: white;
+        box-shadow: 0px 0px 5px;
     }
 
     #hero p {
@@ -71,7 +72,7 @@ body {
     }
 
     #hero #main-content #box {
-        background-color: black;
+        background-color: #091C1E;
         color: white;
         box-shadow: 0px 0px 5px;
     }
@@ -111,7 +112,7 @@ body {
     flex-direction: column;
     align-items: start;
     justify-content: start;
-    background-color: black;
+    background-color: #091C1E;
     /* gap: 25px; */
     /* border: 2px solid; */
 }
@@ -278,7 +279,7 @@ body {
     color: white;
     text-align: center;
     padding: 10px;
-    background-color: black;
+    background-color: #091C1E;
     border-radius: 10px;
     box-shadow: 0px 0px 5px;
 }
