--- a/CssFile/team.css
+++ b/CssFile/team.css
@@ -19,7 +19,7 @@ body {
 
 .mode {
     #left {
-        background-color: #091C1E;
+        background-color: #5B9BBF;
         color: white;
     }
 
@@ -28,7 +28,7 @@ body {
     }
 
     #left a:hover {
-        color: #24315E;
+        color: #5B9BBF;
     }
 
     #left #Payment {
@@ -54,17 +54,17 @@ body {
     }
 
     #hero #navbar #second i {
-        color: #24315E;
+        color: #5B9BBF;
         background-color: white;
     }
 
     #hero #navbar #second #mode i {
-        color: #24315E;
+        color: #5B9BBF;
         background-color: white;
     }
 
     #hero #navbar #third button {
-        border: 1px solid white;
+        border: 2px solid #5B9BBF;
     }
 
     #hero #navbar #Time p {
@@ -72,7 +72,7 @@ body {
     }
 
     #hero #main-content #box {
-        background-color: #091C1E;
+        background-color: #5B9BBF;
         color: white;
         box-shadow: 0px 0px 5px;
     }
@@ -86,12 +86,12 @@ body {
     }
 
     #hero #main-content #team button {
-        color: #24315E;
+        color: #5B9BBF;
         background-color: white;
     }
 
     #hero #main-content #team button:hover {
-        background-color: #24315E;
+        background-color: #5B9BBF;
         color: white;
     }
 }
@@ -112,7 +112,7 @@ body {
     flex-direction: column;
     align-items: start;
     justify-content: start;
-    background-color: #091C1E;
+    background-color: #5B9BBF;
     /* gap: 25px; */
     /* border: 2px solid; */
 }
@@ -150,7 +150,7 @@ body {
 
 #left #team {
     background-color: aliceblue;
-    color: #24315E;
+    color: #5B9BBF;
 }
 
 #left a i {
@@ -159,7 +159,7 @@ body {
 }
 
 #left a:hover {
-    color: #24315E;
+    color: #5B9BBF;
 }
 
 #hero {
@@ -192,7 +192,7 @@ body {
 #hero #navbar #first #welc {
     font-size: 25px;
     font-weight: bold;
-    color: #24315E;
+    color: #5B9BBF;
 }
 
 #hero #navbar #second {
@@ -207,7 +207,7 @@ body {
     width: 160px;
     font-weight: bold;
     font-size: 18px;
-    color: #24315E;
+    color: #5B9BBF;
     text-transform: uppercase;
     letter-spacing: 2px;
     padding: 8px 10px;
@@ -218,13 +218,13 @@ body {
     border: none;
     border-radius: 50px;
     background-color: white;
-    color: #24315E;
+    color: #5B9BBF;
     box-shadow: 0px 0px 2px;
 }
 
 #hero #navbar #second #mode i {
     padding: 8px 8px;
-    color: #24315E;
+    color: #5B9BBF;
 }
 
 #hero #navbar #second a {
@@ -248,9 +248,9 @@ body {
     padding: 9px 20px;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
-    border: 1px solid #24315E;
+    border: 1px solid #5B9BBF;
     cursor: pointer;
-    background-color: #24315E;
+    background-color: #5B9BBF;
     box-shadow: 0px 0px 1px;
 }
 
@@ -279,7 +279,7 @@ body {
     color: white;
     text-align: center;
     padding: 10px;
-    background-color: #091C1E;
+    background-color: #5B9BBF;
     border-radius: 10px;
     box-shadow: 0px 0px 5px;
 }
@@ -315,12 +315,12 @@ body {
     font-weight: bold;
     color: white;
     font-size: 18px;
-    background-color: #24315E;
-    border: 1px solid #24315E;
+    background-color: #5B9BBF;
+    border: 1px solid white;
 }
 
 #hero #main-content #team button:hover {
     background-color: white;
-    color: #24315E;
+    color: #5B9BBF;
     cursor: pointer;
 }
