--- a/CssFile/dash.css
+++ b/CssFile/dash.css
@@ -19,7 +19,7 @@ body {
 
 .mode {
     #left {
-        background-color: #5B9BBF;
+        background-color: #000;
         color: white;
     }
 
@@ -79,6 +79,7 @@ body {
 
     #hero #main-content #box {
         box-shadow: 0px 0px 5px white;
+        background-color: #000;
     }
 }
 
@@ -282,7 +283,7 @@ body {
     display: none;
     position: fixed;
     top: 180px;
-    height: 400px;
+    height: 360px;
     width: 450px;
     background-color: #5b9abfea;
     box-shadow: 0px 0px 5px;
@@ -292,7 +293,7 @@ body {
     /* align-content: center; */
 }
 #alert button{
-    padding: 10px;
+    padding: 5px;
     margin-left: 410px;
     margin-top: 0px;
     font-size: 20px;
@@ -302,12 +303,15 @@ body {
     cursor: pointer;
     color: white;
 }
+#alert button:hover{
+    color: #000;
+}
 
 #alert div{
-    height: 300px;
+    height: 260px;
     width: 100%;
     padding: 10px 80px;
-    gap: 10px;
+    gap: 15px;
     font-weight: bold;
     /* background-color: black; */
     display: flex;
