--- a/CssFile/table.css
+++ b/CssFile/table.css
@@ -19,7 +19,7 @@ body {
 
 .mode {
     #left {
-        background-color: #5B9BBF;
+        background-color: #000;
         color: white;
     }
 
@@ -68,6 +68,13 @@ body {
     }
 
     #hero #navbar #Time p {
+        color: white;
+    }
+    table td {
+        background-color: #000;
+        border: 1px solid #5B9BBF;
+        font-size: 12px;
+        font-weight: bold;
         color: white;
     }
 }
@@ -255,7 +262,7 @@ body {
     /* border: 2px solid #5B9BBF; */
     border-radius: 10px;
     box-shadow: 0px 0px 5px;
-    background-color: #5B9BBF;
+    /* background-color: #5B9BBF; */
 }
 
 table th,
@@ -295,6 +302,7 @@ table th {
     color: #5B9BBF;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
+    padding: 12px;
 }
 
 table td {
