--- a/CssFile/team.css
+++ b/CssFile/team.css
@@ -189,17 +189,18 @@ body {
 }
 
 #hero #navbar #first {
-    width: 410px;
+    width: 380px;
 }
 
 #hero #navbar #first #welc {
     font-size: 25px;
     font-weight: bold;
     color: #5B9BBF;
+    cursor: pointer;
 }
 
 #hero #navbar #second {
-    width: 90px;
+    width: 130px;
     display: flex;
     align-items: center;
     gap: 20px;
@@ -207,7 +208,7 @@ body {
 
 #hero #navbar #Time {
     text-align: center;
-    width: 160px;
+    width: 170px;
     font-weight: bold;
     font-size: 18px;
     color: #5B9BBF;
